[gd_scene load_steps=10 format=2]

[ext_resource path="res://table.jpg" type="Texture" id=1]
[ext_resource path="res://Assets/Epilogue/phone_article1.png" type="Texture" id=2]
[ext_resource path="res://Assets/Epilogue/phone_article2.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Epilogue/Epilogue.gd" type="Script" id=4]
[ext_resource path="res://Assets/Epilogue/phone_article3.png" type="Texture" id=5]
[ext_resource path="res://Assets/Epilogue/phone_article4.png" type="Texture" id=6]
[ext_resource path="res://VT323-Regular.ttf" type="DynamicFontData" id=7]

[sub_resource type="Animation" id=1]
resource_name = "phone"
length = 30.0
tracks/0/type = "bezier"
tracks/0/path = NodePath("ColorRect:color:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1.5, 4, 5, 6.5, 9, 10.5, 13, 15, 17, 20, 22.5 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("ColorRect:color:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1.5, 4, 5, 6.5, 9, 10.5, 13, 15, 17, 20, 22.5 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("ColorRect:color:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1.5, 4, 5, 6.5, 9, 10.5, 13, 15, 17, 20, 22.5 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("ColorRect:color:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1.5, 4, 5, 6.5, 9, 10.5, 13, 15, 17, 20, 22.5 )
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 5, 10.5, 17 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "articleTwo"
}, {
"args": [  ],
"method": "articleThree"
}, {
"args": [  ],
"method": "articleFour"
} ]
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("Foreground:color:r")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 22.5, 25 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("Foreground:color:g")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 22.5, 25 )
}
tracks/7/type = "bezier"
tracks/7/path = NodePath("Foreground:color:b")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 22.5, 25 )
}
tracks/8/type = "bezier"
tracks/8/path = NodePath("Foreground:color:a")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 22.5, 25 )
}
tracks/9/type = "value"
tracks/9/path = NodePath("TheEnd:percent_visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 25, 27.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 1.0 ]
}

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 7 )

[node name="Epilogue" type="Node2D"]
script = ExtResource( 4 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 1.05945
margin_right = 1029.06
margin_bottom = 603.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="phone_article1" type="Sprite" parent="."]
position = Vector2( 503.097, 295.236 )
scale = Vector2( 0.749034, 0.743879 )
texture = ExtResource( 2 )

[node name="phone_article2" type="Sprite" parent="."]
visible = false
position = Vector2( 503.097, 295.235 )
scale = Vector2( 0.749, 0.744 )
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/phone = SubResource( 1 )

[node name="phone_article3" type="Sprite" parent="."]
visible = false
position = Vector2( 503.097, 299.73 )
scale = Vector2( 0.749, 0.744 )
texture = ExtResource( 5 )

[node name="phone_article4" type="Sprite" parent="."]
visible = false
position = Vector2( 504.156, 299.73 )
scale = Vector2( 0.749, 0.744 )
texture = ExtResource( 6 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 366.0
margin_top = 89.0
margin_right = 637.0
margin_bottom = 496.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Foreground" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 604.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TheEnd" type="Label" parent="."]
margin_left = 447.857
margin_top = 256.109
margin_right = 587.857
margin_bottom = 306.109
custom_fonts/font = SubResource( 2 )
text = "The End"
__meta__ = {
"_edit_use_anchors_": false
}
